Added: dont_quote parameter to Query.encode() and query_dont_quote parameter to
  furl.tostr() that exempts valid query characters from percent-encoding, either
  in their entirety, with dont_quote=True, or selectively, with dont_quote='/?'.
Changed: Move package info from __init__.py into the more standard
  __version__.py.
Fixed: Encode '/' consistently in query strings across both quote_plus=True and
  quote_plus=False.

================================================================================
 v2.0.0
================================================================================
Added: All URL components (scheme, host, path, etc) to furl()'s constructor as
  keyword arguments. E.g. f = furl(scheme='http', host='host', path='/lolsup').
Changed: furl.__truediv__() and Path.__truediv__() now mirror
  Pathlib.__truediv__()'s behavior and return a new instance. The original
  instance is no longer modified. Old behavior: f = furl('1'); f / '2' -> str(f)
  == '1'. New behavior: f = furl('1'); f /= '2' -> str(f) == '1/2'.
Fixed: Path.load() now accepts Path instances, e.g. f.path.load(Path('hi')).
Removed: Support for Python 2.6, which reached EOL on 2013-10-29.

================================================================================
 v1.2.1
================================================================================

================================================================================
 v1.2
================================================================================
Added: Path segment appending via the division operator (__truediv__()).
Changed: Bump orderedmultidict dependency to v1.0.
Changed: Check code style with flake8 instead of pycodestyle.
Changed: Percent-encode all non-unreserved characters in Query key=value pairs,
  including valid query characters (e.g. '=', '?', etc). Old encoding:
  "?url=http://foo.com/"; new encoding: "?url=http%3A%2F%2Ffoo.com%2F". Equal