@@ -6,6 +6,7 @@ Added: dont_quote parameter to Query.encode() and query_dont_quote parameter to
   in their entirety, with dont_quote=True, or selectively, with dont_quote='/?'.
 Changed: Move package info from __init__.py into the more standard
   __version__.py.
+Fixed: Support unicode usernames and passwords in Python 2.
 Fixed: Encode '/' consistently in query strings across both quote_plus=True and
   quote_plus=False.
 
